# marion_file_name_converter

./: main.py  pyproject.toml
src/renamarion/: cli.py
