[project]
name = "marion-file-name-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "click>=8.3.0",
    "colorama>=0.4.6",
    "trogon>=0.6.0",
    'windows-curses>=2.4.1; platform_system  == "Windows"',
]

[project.scripts]
renamarion = "renamarion.cli:run"

[tool.uv]
package = true
